# neuromaps-prime

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: resource_contribution.yaml  resource_request.yaml
.github/workflows/: docs.yaml  publish.yaml  test.yaml  validate_graph.yaml
docs/joss/: paper.bib  paper.md
examples/: example_graph_init.py  example_plot_interactive_graph.py  example_surface_transform.py  example_volume_transform.py  fsLR_to_mebrains.py  mebrains_to_yerkes.py  neuromaps_interactive_graph.html  plotter.py  s1200_to_mebrains.py  s1200_to_yerkes19.py
neuromaps_nhp/: config.py
neuromaps_nhp/tests/: test_surface_sphere_project_unproject.py
neuromaps_nhp/utils/: surface_sphere_project_unproject.py
schemas/: neuromaps.schema.json  neuromaps_edges.schema.json  neuromaps_graph.schema.json  neuromaps_nodes.schema.json  neuromaps_notes.schema.json  neuromaps_references.schema.json  neuromaps_surface-hemi.schema.json  neuromaps_surface_edges.schema.json  neuromaps_surfaces.schema.json  neuromaps_volume_edges.schema.json  neuromaps_volumes.schema.json
scripts/: validate_urls.py
src/neuromaps-prime/: transforms.py
src/neuromaps_nhp/: __init__.py  _version.py  config.py  transforms.py  volumetric_transformation.py
src/neuromaps_nhp/datasets/data/: surface_graph.yaml
src/neuromaps_nhp/graph/: transform_graph.py  transforms.py
src/neuromaps_nhp/resources/: atlas_paths.csv  build_paths.py  fetch_resource.py  transforms_paths.csv
src/neuromaps_nhp/surface/: __init__.py  transforms.py  utils.py
src/neuromaps_nhp/tests/: test_volumetric_transform.py
src/neuromaps_nhp/use_cases/: engine.py
src/neuromaps_nhp/utils/: __init__.py  gifti_utils.py  niwrap_wrappers.py  surface.py  surface_sphere_project_unproject.py
src/neuromaps_prime/: __init__.py  fetcher.py  graph.py  logger.py  models.py  niwrap.py  plotting.py  transforms.py  utils.py
src/neuromaps_prime/analysis/: __init__.py  stats.py
src/neuromaps_prime/datasets/data/: neuromaps_graph.yaml  surface_graph.yaml  volume_graph.yaml
src/neuromaps_prime/graph/: __init__.py  builder.py  cache.py  core.py  metadata.py  models.py  utils.py
src/neuromaps_prime/graph/methods/: cache.py  fetchers.py
src/neuromaps_prime/graph/transforms/: __init__.py  surface.py  volume.py
src/neuromaps_prime/remote/: __init__.py  github.py  osf.py
src/neuromaps_prime/resources/: __init__.py  neuromaps_graph.yaml
src/neuromaps_prime/resources/edges/surface/: chimpanzee_chimpanzee.yaml  human_chimpanzee.yaml  human_human.yaml  human_macaque.yaml  macaque_macaque.yaml  macaque_marmoset.yaml
src/neuromaps_prime/resources/edges/volume/: macaque_macaque.yaml
src/neuromaps_prime/resources/nodes/chimpanzee/: BNA.yaml  Juna.yaml  JunaChimp.yaml  NCBR.yaml  Yerkes29.yaml
src/neuromaps_prime/resources/nodes/human/: CIVET.yaml  fsLR.yaml  fsaverage.yaml
src/neuromaps_prime/resources/nodes/macaque/: CIVETNMT.yaml  D99.yaml  MEBRAINS.yaml  NMT2Sym.yaml  Yerkes19.yaml
src/neuromaps_prime/resources/nodes/marmoset/: MBM.yaml  NenckiMonash.yaml
src/neuromaps_prime/resources/nodes/marmoset/NenckiMonash/: NenckiMonash.yaml
src/neuromaps_prime/surface/: __init__.py
src/neuromaps_prime/transforms/: __init__.py  surface.py  utils.py  volume.py
tests/: README.md  __init__.py  conftest.py  test_fetch_resource.py  test_gifti_utils.py  test_graph.py  test_model.py  test_niwrap_wrappers.py  test_surface_sphere_project_unproject.py  test_transforms.py  test_utils.py  test_volumetric_transform.py
tests/graph/: test_graph.py  test_model.py  test_surf_to_surf.py  test_vol_to_surf.py  test_vol_to_vol.py
tests/integration/: test_graph.py
tests/integration/transforms/: __init__.py  test_annotation_cycle.py  test_surf_matrix.py  test_surface.py  test_volume.py
tests/integration/transforms/outputs/: surface_transform_matrix.csv
tests/regression/: cycle.py  test_cycle.py  test_surf_cycle_error.py  test_surf_eigen.py  test_surf_matrix.py  test_surf_to_surf_error.py
tests/surface/: test_surface_transforms.py  test_surface_utils.py  test_utils.py
tests/transforms/: test_surf_cycle_error.py  test_surface.py  test_surface_utils.py  test_transforms_utils.py  test_utils.py  test_volume.py
tests/unit/: __init__.py  test_fetcher.py  test_niwrap.py
tests/unit/analysis/: test_stats.py
tests/unit/graph/: __init__.py  conftest.py  test_cache.py  test_graph.py  test_metadata.py  test_model.py  test_ops.py  test_utils.py  unit_test_cycle.py
tests/unit/graph/transformers/: conftest.py  test_graph.py  test_model.py  test_surf_cycle_error.py  test_surf_to_surf.py  test_surf_to_vol.py  test_vol_to_surf.py  test_vol_to_vol.py
tests/unit/remote/: test_github.py  test_osf.py
tests/unit/transforms/: test_annotation_cycle.py  test_surf_cycle.py  test_surf_matrix.py  test_surface.py  test_utils.py  test_volume.py
tests/utils/: test_niwrap_wrappers.py  test_surface.py
