[project]
name = "neuromaps-prime"
description = "A toolbox for projecting, resampling, and comparing NHP brain maps"
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
keywords = ["network neuroscience", "connectomics"]
authors = [{name = "CMI DAIR", email = "dair@childmind.org"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
  "niwrap>=0.6.3",
  "nibabel>=5.2.1",
  "pyyaml>=6.0.2",
  "networkx>=3.4.2",
  "matplotlib>=3.10.7",
  "numpy>=2.2.6",
  "pydantic>=2.12.3",
  "scipy>=1.15.3"
]

[dependency-groups]
dev = [
  "deptry>=0.23.1",
  "matplotlib-stubs>=0.3.6",
  "mypy>=1.18.2",
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.1",
  "types-pyyaml>=6.0.12.20250915"
]
docs = ["pdoc>=15.0.4"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/neuromaps_prime/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "ANN002",  # ignore type hinting *args
  "ANN003",  # ignore type hinting **kwargs
  "D417"  # ignore docstrings for *args and **kwargs
]
select = ["ANN", "D", "E", "F", "I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
